FEAT: Filter component UI 완성

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
 :root {
   --white-color: rgb(255, 255, 255);
+  --gray-color: #5e5f61;
   --lightgray-color: rgb(240, 241, 243);
+  --lightgray-color2: #f9fafc;
+  --lightgray-color3: rgb(230, 231, 233);
   --purple-color: #524fa1;
 
   --textbox-border-color: rgb(201, 202, 204);
