--- a/app/(CourseSearchPage)/layout.css
+++ b/app/(CourseSearchPage)/layout.css
@@ -11,7 +11,9 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  width: 1280px;
+  @media (min-width: 1280px) {
+    width: 1280px;
+  }
   @media (max-width: 1279px) {
     width: 100%;
   }
